@@ -1,204 +1,202 @@
-<?xml version="1.0"?>
-<!DOCTYPE timeslots SYSTEM "timetable.dtd">
-<timeslots>
-	<slot time="0830">
+<times>
+	<time slot="0830">
 		<booking>
 			<room>sw5 1840</room>
-			<day>friday</day>
-			<course>blaw3600</course>
+			<day_of_week>friday_of_week</day_of_week>
+			<course_name>blaw3600</course_name>
 			<instructor>catherine ryan</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="0930">
+	</time>
+	<time	slot="0930">
 		<booking>
 			<room>se12 323</room>
-			<day>monday</day>
-			<course>comp4985</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>comp4985</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>tuesday</day>
-			<course>comp4981</course>
+			<day_of_week>tuesday_of_week</day_of_week>
+			<course_name>comp4981</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>wednesday</day>
-			<course>comp4985</course>
+			<day_of_week>wednesday_of_week</day_of_week>
+			<course_name>comp4985</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>thursday</day>
-			<course>comp4981</course>
+			<day_of_week>thursday_of_week</day_of_week>
+			<course_name>comp4981</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>sw5 1840</room>
-			<day>friday</day>
-			<course>blaw3600</course>
+			<day_of_week>friday_of_week</day_of_week>
+			<course_name>blaw3600</course_name>
 			<instructor>catherine ryan</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="1030">
+	</time>
+	<time slot="1030">
 		<booking>
 			<room>se12 323</room>
-			<day>monday</day>
-			<course>comp4985</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>comp4985</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>tuesday</day>
-			<course>comp4981</course>
+			<day_of_week>tuesday_of_week</day_of_week>
+			<course_name>comp4981</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>wednesday</day>
-			<course>comp4985</course>
+			<day_of_week>wednesday_of_week</day_of_week>
+			<course_name>comp4985</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>thursday</day>
-			<course>comp4981</course>
+			<day_of_week>thursday_of_week</day_of_week>
+			<course_name>comp4981</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="1130">
+	</time>
+	<time slot="1130">
 		<booking>
 			<room>sw1 1205</room>
-			<day>monday</day>
-			<course>comp4735</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>comp4735</course_name>
 			<instructor>mirela gutica</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>sw5 1850</room>
-			<day>tuesday</day>
-			<course>comp4560</course>
+			<day_of_week>tuesday_of_week</day_of_week>
+			<course_name>comp4560</course_name>
 			<instructor>brenda fine</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>wednesday</day>
-			<course>comp4985</course>
+			<day_of_week>wednesday_of_week</day_of_week>
+			<course_name>comp4985</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>sw3 1710</room>
-			<day>thursday</day>
-			<course>comp4735</course>
+			<day_of_week>thursday_of_week</day_of_week>
+			<course_name>comp4735</course_name>
 			<instructor>mirela gutica</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="1230">
+	</time>
+	<time slot="1230">
 		<booking>
 			<room>sw9 127</room>
-			<day>monday</day>
-			<course>blaw3600</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>blaw3600</course_name>
 			<instructor>catherine ryan</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 323</room>
-			<day>wednesday</day>
-			<course>comp4981</course>
+			<day_of_week>wednesday_of_week</day_of_week>
+			<course_name>comp4981</course_name>
 			<instructor>aman abdulla</instructor>
 			<type>lecture</type>
 		</booking>
 		<booking>
 			<room>sw3 1750</room>
-			<day>friday</day>
-			<course>comp4735</course>
+			<day_of_week>friday_of_week</day_of_week>
+			<course_name>comp4735</course_name>
 			<instructor>brenda fine</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="1330">
+	</time>
+	<time slot="1330">
 		<booking>
 			<room>sw9 127</room>
-			<day>monday</day>
-			<course>blaw3600</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>blaw3600</course_name>
 			<instructor>catherine ryan</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>sw1 1205</room>
-			<day>wednesday</day>
-			<course>comp4735</course>
+			<day_of_week>wednesday_of_week</day_of_week>
+			<course_name>comp4735</course_name>
 			<instructor>mirela gutica</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="1430">
+	</time>
+	<time slot="1430">
 		<booking>
 			<room>sw5 1840</room>
-			<day>tuesday</day>
-			<course>comp4711</course>
+			<day_of_week>tuesday_of_week</day_of_week>
+			<course_name>comp4711</course_name>
 			<instructor>james parry</instructor>
 			<type>lecture</type>
 		</booking>
-	</slot>
-	<slot time="1530">
+	</time>
+	<time slot="1530">
 		<booking>
 			<room>se12 320</room>
-			<day>monday</day>
-			<course>comp4560</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>comp4560</course_name>
 			<instructor>brenda fine</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 321</room>
-			<day>tuesday</day>
-			<course>comp4560</course>
+			<day_of_week>tuesday_of_week</day_of_week>
+			<course_name>comp4560</course_name>
 			<instructor>james parry</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 322</room>
-			<day>thursday</day>
-			<course>comp4735</course>
+			<day_of_week>thursday_of_week</day_of_week>
+			<course_name>comp4735</course_name>
 			<instructor>mathew linder</instructor>
 			<type>lab</type>
 		</booking>
-	</slot>
-	<slot time="1530">
+	</time>
+	<time slot="1630">
 		<booking>
 			<room>se12 320</room>
-			<day>monday</day>
-			<course>comp4560</course>
+			<day_of_week>monday_of_week</day_of_week>
+			<course_name>comp4560</course_name>
 			<instructor>brenda fine</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 321</room>
-			<day>tuesday</day>
-			<course>comp4560</course>
+			<day_of_week>tuesday_of_week</day_of_week>
+			<course_name>comp4560</course_name>
 			<instructor>james parry</instructor>
 			<type>lab</type>
 		</booking>
 		<booking>
 			<room>se12 322</room>
-			<day>thursday</day>
-			<course>comp4735</course>
+			<day_of_week>thursday_of_week</day_of_week>
+			<course_name>comp4735</course_name>
 			<instructor>mathew linder</instructor>
 			<type>lab</type>
 		</booking>
-	</slot>
-</timeslots>
+	</time>
+</times>
